fix: unsplash image

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link rel="shortcut icon" type="image/png" href="photo.png" />
   <link rel="stylesheet" href="./css/style.css">
-  <title>Unsplash API Demo</title>
+  <title>Image finder</title>  
 </head>
 <body>
 
@@ -14,11 +15,13 @@
 
     <header>
       <div class="container">
-        <div id="header">
-          <h2><i class="fas fa-camera" style="color: aliceblue;"></i> Unsplash clone site
+        <div class="wrapper"> 
+          <!-- id="header" -->
+          <h2>
+            <i class="fas fa-camera" style="color: white;"></i> Unsplash Image finder
           </h2>
           <div id="search_box">
-            <input id="input" type="text" placeholder="Search image"><i id="search" class="fas fa-search"></i>
+            <input id="input" type="text" placeholder="Find either word like - red car"><i id="search" class="fas fa-search"></i>
           </div>
         </div>
       </div>
